# mitm-tracker

./: .gitignore  README.md  pyproject.toml
.claude/skills/mitm-tracker/: SKILL.md
src/mitm_tracker/: __init__.py  __main__.py  addon.py  auth_setup.py  cert_manager.py  claude_skill.py  cli.py  config.py  curl_export.py  doctor.py  host_ca.py  maplocal.py  output.py  profile_manager.py  proxy_manager.py  release.py  schema.py  session_manager.py  simulators.py  ssl_list.py  store.py  tray_app.py  tray_launch_agent.py  url_matcher.py
src/mitm_tracker/commands/: cert.py  doctor.py  maplocal.py  profile.py  query.py  record.py  release.py  setup.py  skill.py  ssl.py  tray.py
tests/: conftest.py
tests/integration/: conftest.py  test_addon.py
tests/unit/: test_addon_helpers.py  test_auth_setup.py  test_cert_manager.py  test_claude_skill.py  test_cli_error_handling.py  test_commands_cert.py  test_commands_doctor.py  test_commands_maplocal.py  test_commands_profile.py  test_commands_query.py  test_commands_record.py  test_commands_release.py  test_commands_setup.py  test_commands_skill.py  test_commands_ssl.py  test_commands_tray.py  test_config.py  test_curl_export.py  test_doctor.py  test_host_ca.py  test_maplocal.py  test_profile_manager.py  test_proxy_manager.py  test_release.py  test_schema.py  test_session_manager.py  test_simulators.py  test_smoke.py  test_ssl_list.py  test_store.py  test_tray_app.py  test_tray_launch_agent.py  test_url_matcher.py
