[project]
name = "mitm-tracker"
version = "0.1.0"
description = "Charles-like HTTP(S) proxy with SQLite capture and agent-friendly CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael Quixabeira" }]
keywords = ["mitmproxy", "proxy", "debugging", "http", "https", "ios"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: Proxy Servers",
]

dependencies = [
    "mitmproxy>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
mitm-tracker = "mitm_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/quixabeira-rafael/mitm-tracker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitm_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that use the mitmproxy test harness",
]
filterwarnings = [
    "ignore::DeprecationWarning:pyasn1.*",
    "ignore::DeprecationWarning:ldap3.*",
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
    "ignore::DeprecationWarning:pyparsing.*",
]
